--- a/portfolio/Barbershop/app/scss/dop.scss
+++ b/portfolio/Barbershop/app/scss/dop.scss
@@ -92,6 +92,7 @@
                                     font: 2.8em "RobotoRegular";
                                     color: #999999;
                                     text-decoration: underline;
+                                    outline: none !important;
                                 }
                             }
                        }
