--- a/portfolio/Barbershop/app/css/common.css
+++ b/portfolio/Barbershop/app/css/common.css
@@ -78,17 +78,36 @@ p {
 
 .bg_topgun {
   position: absolute;
-  width: -webkit-calc(100% - 30px);
-  width: calc(100% - 30px);
+  width: 90%;
   z-index: 2;
   height: 100%;
-  left: 15px; }
+  left: 5%; }
   .bg_topgun .bg {
     width: 100%;
-    height: 100%;
-    background: url(../img/bg_logo.png) no-repeat center center;
-    -webkit-background-size: contain;
-            background-size: contain; }
+    position: absolute;
+    z-index: 2;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%); }
+    .bg_topgun .bg img {
+      width: 100%; }
+  .bg_topgun .active_shadow {
+    display: block;
+    width: 70%;
+    left: 15%;
+    position: absolute;
+    z-index: 1;
+    height: 0;
+    top: 50%;
+    -webkit-transition: 1s ease;
+    -o-transition: 1s ease;
+    transition: 1s ease;
+    -webkit-box-shadow: 0px 0px 40em 60em rgba(235, 230, 235, 0.08);
+            box-shadow: 0px 0px 40em 60em rgba(235, 230, 235, 0.08);
+    opacity: 0; }
+  .bg_topgun .active {
+    opacity: 1; }
 
 .bg_topgun_active {
   height: 100vh !important;
