--- a/portfolio/Barbershop/app/css/libs.css
+++ b/portfolio/Barbershop/app/css/libs.css
@@ -12,6 +12,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+@import url(../libs/magnific/magnific-popup.css);
 html {
   line-height: 1.15;
   /* 1 */
