--- a/portfolio/Barbershop/app/scss/common.scss
+++ b/portfolio/Barbershop/app/scss/common.scss
@@ -53,15 +53,34 @@ p {
 
 .bg_topgun {
     position: absolute;
-    width: calc(100% - 30px);
+    width: 90%;
     z-index: 2;
     height: 100%;
-    left: 15px;
+    left: 5%;
     .bg {
         width: 100%;
-        height: 100%;
-        background: url(../img/bg_logo.png) no-repeat center center;
-        background-size: contain;
+        position: absolute;
+        z-index: 2;
+        top: 50%;
+        transform: translateY(-50%);
+        img {
+            width: 100%;
+        }
+    }
+    .active_shadow {
+        display: block;
+        width: 70%;
+        left: 15%;
+        position: absolute;
+        z-index: 1;
+        height: 0;
+        top: 50%;
+        transition: 1s ease;
+        box-shadow: 0px 0px 40em 60em rgba(235, 230, 235, 0.08);
+        opacity: 0;
+    }
+    .active {
+         opacity: 1;
     }
 }
 
