--- a/portfolio/Barbershop/app/scss/main.scss
+++ b/portfolio/Barbershop/app/scss/main.scss
@@ -25,6 +25,12 @@
         top: 0;
         left: 0;
         overflow: hidden;
+        .bg_other {
+            width: 100%;
+            height: 100%;
+            background: url(../img/bg_moscov.jpg) no-repeat center center;
+            background-size: cover;
+        }
         .bg_img {
             opacity: 0.05;
             img {
