--- a/portfolio/Barbershop/app/scss/main.scss
+++ b/portfolio/Barbershop/app/scss/main.scss
@@ -1,4 +1,3 @@
-
 #home {
     position: relative;
     z-index: 2;
@@ -98,9 +97,9 @@
             height: 100%;
             p {
                 font: 60em "BebasNeueBold";
-                        color: #fff;
-                        opacity: 0.1;
-                        padding-bottom: 1.7em;
+                color: #fff;
+                opacity: 0.1;
+                padding-bottom: 1.7em;
             }
         }
         .spb {
@@ -110,9 +109,9 @@
             height: 100%;
             p {
                 font: 46.3em "BebasNeueBold";
-                        color: #fff;
-                        opacity: 0.1;
-                        padding-bottom: 2em;
+                color: #fff;
+                opacity: 0.1;
+                padding-bottom: 2em;
             }
         }
         .reg {
@@ -122,10 +121,10 @@
             height: 100%;
             p {
                 font: 56em "BebasNeueBold";
-                        color: #fff;
-                        opacity: 0.1;
-                        padding-top: 0.3em;
-                        padding-bottom: 1.9em;
+                color: #fff;
+                opacity: 0.1;
+                padding-top: 0.3em;
+                padding-bottom: 1.9em;
             }
         }
         .invest {
@@ -138,10 +137,10 @@
                 font: 103em "BebasNeueBold";
                 position: relative;
                 z-index: 2;
-                        color: #fff;
-                        opacity: 0.1;
-                        letter-spacing: -0.05em;
-                        padding-bottom: 0.7em;
+                color: #fff;
+                opacity: 0.1;
+                letter-spacing: -0.05em;
+                padding-bottom: 0.7em;
             }
             .bg {
                 position: absolute;
@@ -153,13 +152,13 @@
                 justify-content: center;
                 overflow: hidden;
                 .bg_content {
-                     background: url(../img/invest_bg.png) no-repeat center center;
-                     background-size: contain;
-                     height: 100%;
-                     width: 100%;
-                     margin: 0 auto;
-                     position: absolute;
-                     top: 60em;
+                    background: url(../img/invest_bg.png) no-repeat center center;
+                    background-size: contain;
+                    height: 100%;
+                    width: 100%;
+                    margin: 0 auto;
+                    position: absolute;
+                    top: 60em;
                 }
             }
         }
@@ -293,7 +292,7 @@
                                     background: url(../img/rub.png) no-repeat;
                                     background-size: contain;
                                     position: absolute;
-                                    top: 13em;
+                                    bottom: 15em;
                                 }
                             }
                         }
@@ -329,47 +328,55 @@
                     }
                 }
             }
-            .spb_page {
-            }
             .reg_page {
-
-                .tab_content_block .number {
-                    justify-content: space-between !important;
+                .center {
+                    padding-left: 0 !important;
+                    padding-right: 23em !important;
                 }
-                .left {
-                    align-self: flex-start !important;
-                    margin-left: 45em;
-                }
-                .right {
-                    align-self: flex-end !important;
-                    .right_top {
-                        padding-right: 50em;
-                    }
-                    .left_item {
-                        margin-left: 0;
-                    }
-                    .more {
-                        padding-top: 3.9em !important;
-                    }
-                    .number {
-                        justify-content: flex-end !important;
-                    }
-                }
-                .tab_content_block {
-                    h2 {
-                        font: 19.5em "BebasNeueBold";
-                        color: #fff;
-                        letter-spacing: 0em;
-                        padding-left: 0.5em;
-                        padding-top: 1.15em;
-                        padding-bottom: 0em;
-                        margin-bottom: 0;
-                        span {
-                            font-family: "BebasNeueBook";
-                            padding-right: 0.4em;
-                            letter-spacing: .1em;
+                .top {
+                            font-size: 10em !important;
+                            padding-left: 0.15em;
+                            letter-spacing: 0.1em;
+                            padding-bottom: 0.4em;
+                            padding-top: 0.7em;
                         }
+                .tab_content_block .number .right .more {
+                    padding-top: 15em;
+                }
+                .left_item {
+                    align-self: center;
+                    color: #fff;
+                    white-space: nowrap;
+                    position: relative;
+                    .left_item {
+                        font: 6em "BebasNeueBook";
+                        letter-spacing: 0.1em;
+                        padding-right: 0.15em;
                     }
+                    .numb {
+                        font: 30em "BebasNeueBold";
+                        letter-spacing: 0em;
+                    }
+                    .right_item {
+                        font: 13em "BebasNeueRegular";
+                        letter-spacing: 0.1em;
+                        margin-left: 0.1em;
+                    }
+                    .rub {
+                        display: inline-block;
+                        width: 5.6em;
+                        height: 6.3em;
+                        background: url(../img/rub.png) no-repeat;
+                        background-size: contain;
+                        position: absolute;
+                        bottom: 15em;
+                    }
+                    .do {
+                                font: 8em "BebasNeueRegular";
+                                letter-spacing: 0em;
+                                padding-left: 0.3em;
+                                padding-right: 0.2em;
+                            }
                 }
             }
         }
@@ -427,16 +434,16 @@
 }
 
 @media screen and (min-width: 1520px) {
-      #home .container {
+    #home .container {
         overflow: hidden;
-      }
+    }
 }
 
 @media screen and (max-width: 1519px) {
-     #home .container .tab_content .moscow_page .tab_content_block h2,
-       #home .container .tab_content .spb_page .tab_content_block h2 {
+    #home .container .tab_content .moscow_page .tab_content_block h2,
+    #home .container .tab_content .spb_page .tab_content_block h2 {
         padding-top: 3em;
-      }
+    }
 }
 
 @media screen and (max-width: 1200px) {
@@ -458,15 +465,13 @@
     }
 }
 
-@media screen and (max-width: 767px) {
-}
+@media screen and (max-width: 767px) {}
 
 @media screen and (max-width: 567px) {
-    @media screen and (max-height: 550px) {
-         #home .container .tab_content .moscow_page .tab_content_block h2, #home .container .tab_content .spb_page .tab_content_block h2 {
+    @media screen and (max-height: 580px) {
+        #home .container .tab_content .moscow_page .tab_content_block h2, #home .container .tab_content .spb_page .tab_content_block h2 {
             margin: 0 !important;
-         }
-         
+        }
     }
     #home .container {
         min-height: 520px;
@@ -546,6 +551,7 @@
     #home .container .tab_content .spb_page .tab_content_block .number .center,
     #home .container .tab_content .reg_page .tab_content_block .number .center {
         padding-left: 0;
+        padding-right: 0 !important;
     }
     #home .container .tab_content .moscow_page .tab_content_block .number .num {
         padding-right: 0.08em;
@@ -560,6 +566,12 @@
     #home .container .tab_content .reg_page .tab_content_block h2 {
         font-size: 14em;
         margin-bottom: 1em;
+    }
+    #home .container .tab_content .moscow_page .tab_content_block h2, #home .container .tab_content .spb_page .tab_content_block h2 {
+        padding-left: 0;
+    }
+    #home .container .tab_content .reg_page .tab_content_block h2 {
+        padding-left: 0.5em;
     }
     #home .container .tab_content .reg_page .tab_content_block .number {
         flex-direction: column;
