--- a/portfolio/Barbershop/app/scss/main.scss
+++ b/portfolio/Barbershop/app/scss/main.scss
@@ -468,7 +468,7 @@
 @media screen and (max-width: 767px) {}
 
 @media screen and (max-width: 567px) {
-    @media screen and (max-height: 580px) {
+    @media screen and (max-height: 560px) {
         #home .container .tab_content .moscow_page .tab_content_block h2, #home .container .tab_content .spb_page .tab_content_block h2 {
             margin: 0 !important;
         }
@@ -495,7 +495,16 @@
     #home .container .tab_content .moscow_page .tab_content_block .number .top,
     #home .container .tab_content .spb_page .tab_content_block .number .top,
     #home .container .tab_content .reg_page .tab_content_block .number .top {
-        padding-bottom: 0.25em;
+        padding-bottom: 0.6em;
+    }
+    #home .container .tab_content .reg_page .tab_content_block .number .center {
+        order: 1;
+    }
+    #home .container .tab_content .reg_page .tab_content_block .number .left {
+        order: 2;
+    }
+    #home .container .tab_content .reg_page .tab_content_block .number .right {
+        order: 3;
     }
     #home .container .tab_content .moscow_page .tab_content_block .number .left p .left_item,
     #home .container .tab_content .moscow_page .tab_content_block .number .right p .left_item,
